scripts/tests/errors/err_modulo_by_zero.bu
// Test: modulo by zero
// Expected: "Modulo by zero" error

var x = 10 % 0;
